# OpenLCM

./: .gitignore  README.md  docs.html  index.html  pyproject.toml
openlcm/: __init__.py
openlcm/adapters/: __init__.py  anthropic.py  autogen.py  base.py  crewai.py  gemini.py  google_adk.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  openai.py
openlcm/backends/: __init__.py  anthropic.py  base.py  callable.py  litellm.py  openai.py
openlcm/cli/: main.py
openlcm/core/: __init__.py  config.py  dag.py  db_bootstrap.py  embeddings.py  engine.py  escalation.py  extraction.py  facts.py  ingest_protection.py  lifecycle_state.py  message_content.py  message_patterns.py  model_routing.py  schemas.py  search_query.py  store.py  tools.py
openlcm/viz/: events.py  server.py
openlcm/viz/static/: dashboard.js  index.html  styles.css
tests/: test_core.py
