[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlcm"
version = "0.1.0"
description = "Framework-agnostic Lossless Context Management SDK for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agents", "context", "memory", "langchain", "langgraph", "crewai", "autogen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Zero required runtime deps — sqlite3 is stdlib
dependencies = []

[project.optional-dependencies]
anthropic  = ["anthropic>=0.40"]
openai     = ["openai>=1.0"]
litellm    = ["litellm>=1.0"]
langgraph  = ["langgraph>=0.2", "langgraph-checkpoint>=2.0"]
crewai     = ["crewai>=0.80"]
autogen    = ["autogen-agentchat>=0.4", "autogen-core>=0.4"]
google-adk = ["google-adk>=1.0"]
viz        = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "sse-starlette>=2.0"]
dev        = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]
all        = [
    "openlcm[litellm,viz,langgraph,crewai,autogen]",
]

[project.scripts]
openlcm = "openlcm.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["openlcm"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build.targets.sdist]
include = ["openlcm/**", "tests/**", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
