[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlcm"
version = "0.1.0"
description = "Framework-agnostic Lossless Context Management SDK for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agents", "context", "memory", "langchain", "langgraph", "crewai", "autogen", "google-adk", "lossless", "context-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.0",
    # LLM provider SDKs
    "openai>=1.0",
    "anthropic>=0.30",
    "google-genai>=1.0",
    # Framework adapters
    "langchain-core>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint>=2.0",
    "crewai>=0.80",
    "autogen-agentchat>=0.4",
    "autogen-core>=0.4",
    "google-adk>=1.0",
    "llama-index-core>=0.10",
    "haystack-ai>=2.3",
    # Live dashboard
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.urls]
Homepage = "https://akshay-eng.github.io/OpenLCM/"
Documentation = "https://akshay-eng.github.io/OpenLCM/docs.html"
Repository = "https://github.com/akshay-eng/OpenLCM"
"Bug Tracker" = "https://github.com/akshay-eng/OpenLCM/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
openlcm = "openlcm.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["openlcm"]

[tool.hatch.build.targets.sdist]
include = ["openlcm/**", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
